# AquaHash

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  aquahash.h  benchmark.md  build.sh  install.md  install.sh
3p/: build_all.sh  build_using_cmake.sh  build_using_configure.sh  build_using_make.sh  get_build_options.sh
benchmark/: CMakeLists.txt  benchmark.md  benchmark_commands.cpp  clhash.h  clhash_impl.h  hash_table.cpp  plot_benchmark_results.py  random_string.cpp  run_benchmark.sh  test_utils.h
commands/: CMakeLists.txt  aquahash.cpp
docs/: slides.md
src/: aquahash.h  aquahash_policy.h  interface.h  params.h  reader.h  stream.h  utils.h  verification.h
unittests/: CMakeLists.txt  file.cpp  hash_function.cpp  hash_table.cpp
